set the profile page align center fixed image size and role text

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,11 +12,16 @@ main {
   font-size: 23px;
   text-align: center;
   margin-bottom: 20px;
+  font-weight: 700;
 }
 .description{
     text-align: center;
+
   a{
     color: black;
+    img {
+      height: 150px;
+    }
     h5{
       margin-top: .5rem;
     }
@@ -31,6 +36,7 @@ main {
 // Profile Page style start
 
 .detail{
+  text-align: center;
   h5{
     margin-top: .5rem;
   }
